--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>첨단부영2차아파트</title>
-  <meta name="description" content="첨단부영2차아파트 공식 홈페이지. 공지사항, 민원신청, 시설예약, 커뮤니티 소식 안내." />
+  <title>첨단OOO아파트</title>
+  <meta name="description" content="첨단OOO아파트 공식 홈페이지. 공지사항, 민원신청, 시설예약, 커뮤니티 소식 안내." />
   <meta name="theme-color" content="#0ea5e9" />
-  <meta property="og:title" content="첨단부영2차아파트" />
+  <meta property="og:title" content="첨단OOO아파트" />
   <meta property="og:description" content="입주민을 위한 소식과 안내를 한 곳에서." />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ko_KR" />
@@ -45,7 +45,7 @@
   <!-- Top Bar -->
   <div class="w-full bg-slate-900 text-white text-sm">
     <div class="max-w-7xl mx-auto flex items-center justify-between px-4 py-2">
-      <p class="opacity-90">첨단부영2차아파트 관리사무소</p>
+      <p class="opacity-90">첨단OOO아파트 관리사무소</p>
       <div class="flex items-center gap-4">
         <button id="toggleTheme" class="opacity-90 hover:opacity-100" aria-label="다크 모드 전환">🌓</button>
         <a href="#contact" class="hover:underline">문의하기</a>
@@ -67,7 +67,7 @@
               <circle cx="8" cy="6" r="1" fill="currentColor"/>
             </svg>
           </span>
-          <span class="text-xl font-extrabold tracking-tight">첨단부영2차아파트</span>
+          <span class="text-xl font-extrabold tracking-tight">첨단OOO아파트</span>
         </a>
 
         <nav class="hidden md:flex items-center gap-6 text-sm">
@@ -101,7 +101,7 @@
       <div class="grid lg:grid-cols-2 gap-10 items-center">
         <div>
           <h1 class="text-3xl sm:text-4xl lg:text-5xl font-extrabold leading-tight tracking-tight">
-            첨단부영2차아파트
+            첨단OOO아파트
             <span class="block mt-2 text-brand-700">입주민을 위한 통합 포털</span>
           </h1>
           <p class="mt-5 text-gray-600 max-w-prose">공지사항 확인, 시설 예약, 민원 접수까지 한 번에. 쾌적하고 안전한 주거문화를 함께 만들어갑니다.</p>
@@ -221,7 +221,7 @@
       <div class="grid lg:grid-cols-2 gap-10 items-start">
         <div>
           <h2 class="text-xl font-extrabold">아파트 소개</h2>
-          <p class="mt-4 text-gray-700 leading-relaxed">첨단부영2차아파트는 삶의 편안함과 안전을 최우선으로 생각합니다. 풍성한 녹지와 생활편의시설, 탄탄한 관리 체계를 바탕으로 입주민 모두가 만족하는 주거환경을 제공하고 있습니다.</p>
+          <p class="mt-4 text-gray-700 leading-relaxed">첨단OOO아파트는 삶의 편안함과 안전을 최우선으로 생각합니다. 풍성한 녹지와 생활편의시설, 탄탄한 관리 체계를 바탕으로 입주민 모두가 만족하는 주거환경을 제공하고 있습니다.</p>
           <ul class="mt-6 space-y-3 text-gray-700">
             <li class="flex items-center gap-2"><span class="h-2 w-2 rounded-full bg-brand-600"></span>세대수: <span class="font-medium">(예) 1,234세대</span></li>
             <li class="flex items-center gap-2"><span class="h-2 w-2 rounded-full bg-brand-600"></span>완공: <span class="font-medium">(예) 2010년</span></li>
@@ -233,12 +233,12 @@
           <dl class="mt-4 grid sm:grid-cols-2 gap-4 text-sm">
             <div class="rounded-xl bg-white border p-4">
               <dt class="text-gray-500">관리사무소</dt>
-              <dd class="font-semibold">062-971-7783</dd>
+              <dd class="font-semibold">060-000-0000</dd>
               <dd class="text-gray-500 mt-1">평일 09:00~18:00</dd>
             </div>
             <div class="rounded-xl bg-white border p-4">
               <dt class="text-gray-500">경비실</dt>
-              <dd class="font-semibold">062-000-0001</dd>
+              <dd class="font-semibold">060-000-0001</dd>
               <dd class="text-gray-500 mt-1">24시간</dd>
             </div>
             <div class="rounded-xl bg-white border p-4">
@@ -301,7 +301,7 @@
     <div class="max-w-7xl mx-auto px-4 py-12">
       <div class="grid md:grid-cols-4 gap-8">
         <div class="md:col-span-2">
-          <p class="text-lg font-extrabold">첨단부영2차아파트</p>
+          <p class="text-lg font-extrabold">첨단OOO아파트</p>
           <p class="mt-2 text-sm text-slate-300">입주민의 의견을 소중히 듣겠습니다. 보다 나은 단지 운영을 위해 항상 노력하겠습니다.</p>
           <p class="mt-4 text-sm">주소: (예) 광주광역시 북구 첨단과기로 00</p>
         </div>
@@ -317,8 +317,8 @@
         <div>
           <p class="font-semibold">연락처</p>
           <ul class="mt-3 space-y-2 text-sm">
-            <li>관리사무소: 062-971-7783</li>
-            <li>경비실: 062-000-0001</li>
+            <li>관리사무소: 060-000-0000</li>
+            <li>경비실: 060-000-0001</li>
             <li>이메일: apt7783@hanmail.com</li>
           </ul>
         </div>
